# paper-implemetation

./: .gitignore  README.md  histograms.py  pyproject.toml  train_all_idb1.py  train_all_idb2.py  validate.py
backup/: analysis.py  histograms.py  noise0.2.py
src/paper_implemetation/: __init__.py  test.ipynb
src/paper_implemetation/Stage_1__Image_Classification/: 1__Lenet-5.ipynb  2__Alexnet.ipynb  README.md
